2003-12-13  Michael Terry <mterry@fastmail.fm>

	* GNOME_CDPlayerApplet.server.in.in, Makefile.am, cdplayer.c: Use
	gnome-icon-theme icon instead of built-in application icon.

2003-11-01  Kaushal Kumar <kaushal.kumar@wipro.com>

	* cdplayer.h: Added played_by_applet in CDPlayerData.
	* cdplayer.c: Set played_by_applet if cdplayer applet plays the cdrom,
	un-set it otherwise. Helps to decide whether to stop the cdrom before
	exit, when gnome-cd is running. Fixes bugzilla #123033.

2003-10-10  Kjartan Maraas  <kmaraas@gnome.org>

	* cdplayer.c: (cdplayer_applet_factory), (cdplayer_destroy): Rename
	applet_factory() to cdplayer_applet_factory() just to have a sane 
	namespace. Also plug a couple of leaks found by valgrind. Fixes
	bug #124300.

2003-08-07  Irene Ryan <irene.ryan@sun.com>

	* docs/C/cdplayer.xml, cdplayer-C.omf: updates to Help for GNOME 2.4 release
	* docs/C/l10n.txt: update information for L10N teams

2003-07-21  Dennis Cranston <dennis_cranston at yahoo com>

	* cdplayer.c:  HIGify widget padding between the vbox 
	and action area of the dialogs.

2003-07-17  Rajkumar Sivasamy <rajkumar.siva@wipro.com>

	* cdplayer.c: cdplayer applet to use "media-*" as stock-ids.
	Fixes bug #117458.

Thu Jul 03 16:12:58 2003  George Lebl <jirka@5z.com>

	* cdplayer.c: key-writability fixes for the device path

2003-06-21  Elijah Newren <newren@math.utah.edu>

	* cdrom-linux.c: Fixed a crash on eject which occurred if the user
	had paused the music, by simply correcting the cdp->use_count
	reference count to have the right value.  Fixes bug #115686.

2003-06-03  Kevin Vandersloot

	* cdplayer.c: expand for FItt's law and get rid of external frame. Needed to remove
	applet tooltip for full Fitt's law effect on the buttons. Should investigate a little. Also
	fiddle a little with the packing

2003-05-17  Dennis Cranston <dennis_cranston at yahoo com>

	* GNOME_CDPlayerApplet.xml:  Change "Run External CD Player" menu
	item to "Open CD Player".
 